fix sonar issues in sip-maven-plugin